# holz

./: .gitignore  README.rst  bla.hs  bla.py  holz-benchmark.prof.html  holz.cabal
src/: Benchmark.hs  Cards.hs  Data.hs  Decision.hs  Evaluate.hs  Game.hs  Hands.hs  Main.hs  Prompt.hs  Simulate.hs  Util.hs  data_writer.py
src/HandStrength/: Data.hs  data_writer.py
test/: TestDoctest.hs  TestMain.hs
