name:                holz
version:             0.1.0.0
synopsis:            An open-face Chinese poker analysis engine.
-- description:         
homepage:            https://github.com/dtrifuno/holz
license:             GPL-3
license-file:        LICENSE
author:              Darko Trifunovski
maintainer:          dtrifuno@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable holz
  main-is:           Main.hs
  ghc-options:       
    -Wall
    -O2
    -threaded
    "-with-rtsopts=-N"
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4.8 && < 4.9
                     , containers
                     , vector
                     , random
                     , text
  hs-source-dirs:    src
  default-language:  Haskell2010

-- Executable with hardcoded input for profiling
executable holz-benchmark
  main-is:           Benchmark.hs
  ghc-options:
    -O2
    -threaded
    -fprof-auto
    -prof
    "-with-rtsopts=-N -p -s -h -i0.1"
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4.8 && < 4.9
                     , containers
                     , vector
                     , random
                     , text
  hs-source-dirs:    src
  default-language:  Haskell2010


Test-Suite unittests-holz
  type:              exitcode-stdio-1.0
  main-is:           TestMain.hs
  build-depends:       base >= 4.8 && < 4.9
                     , containers
                     , vector
                     , random
                     , text
                     , HUnit
  hs-source-dirs:    test src
  default-language:  Haskell2010

Test-Suite doctests-holz
  type:              exitcode-stdio-1.0
  main-is:           TestDoctest.hs
  build-depends:       base >= 4.8 && < 4.9
                     , doctest >= 0.10
  hs-source-dirs:    test
  default-language:  Haskell2010
